@@ -26,9 +26,6 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-misc_SCRIPTS = misc/kyuaify.sh
-EXTRA_DIST += $(misc_SCRIPTS)
-
 dist_misc_DATA  = misc/context.html
 dist_misc_DATA += misc/index.html
 dist_misc_DATA += misc/report.css
